--- a/main.html
+++ b/main.html
@@ -4,10 +4,41 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	   <style>
+      table, th, tr,td {
+         border: 1px solid black;
+		  
+      }
+		   table{
+			   width:100%;
+			   padding:1px;
+		   }
+   </style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 style="text-align:center;">HTML Assignment #3</h1>
+	<table cellspacing="1px">
+		<tr>
+			<td style="text-align:left;">left</td>
+			<td style="text-align:center;">center</td>
+			<td style="text-align:right;">right</td>
+		</tr>
+        <tr>
+			<td style="text-align:left;">left</td>
+			<td style="text-align:center;">center</td>
+			<td style="text-align:right;">right</td>
+		</tr>
+		<tr>
+			<td style="text-align:left;">left</td>
+			<td style="text-align:center;">center</td>
+			<td style="text-align:right;">right</td>
+		</tr>
+
+			
+
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
